<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.TravelsMap.StandardBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_no_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            android:text="5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_rate_description"
            android:src="@drawable/ic_baseline_star_rate_16"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView_number_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/textView_rating"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            android:text="(22)" />

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/route_chip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_route"
            app:chipEndPadding="8dp"
            app:chipIcon="@drawable/ic_baseline_route_24"
            app:chipStartPadding="8dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/save_chip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_save"
            app:chipEndPadding="8dp"
            app:chipIcon="@drawable/ic_outline_bookmark_24"
            app:chipStartPadding="8dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/shortcut_chip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_shortcut"
            app:chipEndPadding="8dp"
            app:chipIcon="@drawable/ic_baseline_flag_24"
            app:chipStartPadding="8dp" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="auto">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_overview" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_reviews" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_photo" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/shortcut_info_viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>