<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_edit_profile"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/title_done"
            android:textColor="@color/black" />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/textView_edit_profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/title_edit_profile_photo"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_baseline_person_96" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_name"
            android:inputType="text"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_username"
            android:inputType="text"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/title_save" />

</LinearLayout>