<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:text="@string/title_selected_group_error"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_group_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:drawableStart="@drawable/ic_baseline_group_add_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
        android:text="@string/title_add_group" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/find_group_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
        android:text="@string/title_find_group" />

</LinearLayout>