<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_add_participant"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_invite_participant" />

    <TextView
        android:id="@+id/textView_groupID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        tools:text="group ID" />

    <include layout="@layout/separator_layout" />

    <TextView
        android:id="@+id/textView_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/title_share"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/textView_copy_identifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/title_copy_identifier"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_content_copy_24" />

</LinearLayout>