<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp">

    <ImageView
        android:id="@+id/imageView_user_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_avatar_description"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_username"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_name"
        app:layout_constraintStart_toEndOf="@+id/imageView_user_photo"
        app:layout_constraintTop_toTopOf="@+id/imageView_user_photo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_user_photo"
        app:layout_constraintStart_toEndOf="@+id/imageView_user_photo"
        app:layout_constraintTop_toBottomOf="@+id/textView_username" />

</androidx.constraintlayout.widget.ConstraintLayout>